INCLUDE_DIRECTORIES( src/ ${PYTHON_INCLUDE_PATH}
 	                    ${BOOST_INCLUDE_DIR} )

ADD_LIBRARY(path2 SHARED "path2.cpp")
SET_TARGET_PROPERTIES(path2 PROPERTIES PREFIX "_")
TARGET_LINK_LIBRARIES(path2 2geom ${PYTHON_LIBRARIES} ${BOOST_PYTHON_LIBRARY})

INSTALL(TARGETS path2 DESTINATION "${SITEPACKAGE}/py2geom/path2")
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/__init__.py" DESTINATION "${SITEPACKAGE}/py2geom/path2")

